# katana_driver

katana_tutorials/: CMakeLists.txt
katana_tutorials/launch/: offset_inverse_kinematics.launch  sixR_inverse_kinematics.launch  test_inverse_kinematics.launch
katana_tutorials/src/: offset_inverse_kinematics.cpp  sixR_inverse_kinematics.cpp  test_inverse_kinematics.cpp
